--- a/src/Makefile
+++ b/src/Makefile
@@ -8,9 +8,9 @@ LEX=nno-lex.txt adj-nno-lex.txt \
 	abbr-nno-lex.txt
 
 
-XFST = xfst -utf8
-LEXC = lexc -utf8
-TWOLC = twolc -utf8
+XFST = xfst #-utf8
+LEXC = lexc #-utf8
+TWOLC = twolc #-utf8
 
 ifeq (victorio.uit.no, $(shell hostname))
 XFST = /opt/sami/xerox/c-fsm/ix86-linux2.6-gcc3.4/bin/fst -utf8
