--- a/src/Makefile
+++ b/src/Makefile
@@ -46,37 +46,37 @@ inno.fst: ../bin/inno.fst
 
  
 # The first goal is to build nno.fst, the analyzer.
-# This goal depends on nno.save and caseconv.fst being up to date
+# This goal depends on nno.save and inituppercase.fst being up to date
 
 nno.fst: ../bin/nno.fst
 ../bin/nno.fst: ../bin/nno.save \
-				../bin/caseconv.fst \
+				../bin/inituppercase.fst \
 				../bin/allcaps.fst \
 				../bin/tok.fst
 	@echo
 	@echo "*** Building nno.fst ***" ;
 	@echo
 	@printf "read regex @\"../bin/nno.save\" .o. \
-	@\"../bin/caseconv.fst\" ; \n\
+	@\"../bin/inituppercase.fst\" ; \n\
 	save stack ../bin/nno.fst \n\
 	quit \n" > /tmp/nno-fst-script
 	$(XFST) < /tmp/nno-fst-script
 	@rm -f /tmp/nno-fst-script
 
 
-# The second goal is to build the caseconv.fst file
-# This goal depends on case.regex
+# The second goal is to build the inituppercase.fst file
+# This goal depends on inituppercase.regex
 
-caseconv.fst: ../bin/caseconv.fst
-../bin/caseconv.fst: case.regex
+inituppercase.fst: ../bin/inituppercase.fst
+../bin/inituppercase.fst: inituppercase.regex
 	@echo
-	@echo "*** Building caseconv.fst ***" ;
+	@echo "*** Building inituppercase.fst ***" ;
 	@echo
-	@printf "read regex < case.regex \n\
-	save stack ../bin/caseconv.fst \n\
-	quit \n" > /tmp/caseconv-script
-	$(XFST) < /tmp/caseconv-script
-	@rm -f /tmp/caseconv-script
+	@printf "read regex < inituppercase.regex \n\
+	save stack ../bin/inituppercase.fst \n\
+	quit \n" > /tmp/inituppercase-script
+	$(XFST) < /tmp/inituppercase-script
+	@rm -f /tmp/inituppercase-script
 
 
 # This goal depends on allcaps.regex
