--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -35,7 +35,6 @@ GT_LEXC_SRCS_L1_L2=\
 			 stems/prepositions.lexc   \
 			 stems/pronouns.lexc       \
 			 stems/propernouns.lexc    \
-			 stems/punctuation.lexc    \
 			 stems/verbs.lexc
 
 # If you are building an error-detecting L2 analyser, specify the lexc files
@@ -54,7 +53,7 @@ GT_LEXC_L2_SRCS=\
 			$(L2)
 
 # Set this to the names of all generated lexc files, if any
-GENERATED_LEXC_SRCS=
+GENERATED_LEXC_SRCS=generated_files/punctuation.lexc
 
 # Set this to the names of all source xml files, if any
 GT_XML_SRCS=
