The allcaps file created unknown problems - commented out.

--- a/src/orthography/Makefile.am
+++ b/src/orthography/Makefile.am
@@ -13,9 +13,10 @@ GT_ORTHOGRAPHIC_REGEX_SRCS=\
 		spellrelax-tags.regex
 
 GT_ORTHOGRAPHIC_XFSCRIPT_SRCS=\
-		allcaps.xfscript      \
 		downcase-derived_proper-strings.xfscript \
 		spellrelax-with-tags.xfscript
+
+#		allcaps.xfscript
 
 # General build rules included from here:
 include $(top_srcdir)/am-shared/src-orthography-dir-include.am
