[Template merge - langs/und] Added the new multichar +Symbol to the multichar definitions.

--- a/src/morphology/incoming/Makefile
+++ b/src/morphology/incoming/Makefile
@@ -35,8 +35,11 @@ entries.lexc: fullform.utf8.txt parse-nno.pl
 	echo                    >> $@
 	cat $<                  >> $@
 	echo                    >> $@
+	echo "+Symbol !!≈ * @CODE@ = symbols in the text, like £, €, ©" >> $@
+	echo                    >> $@
 	echo "LEXICON Root"     >> $@
 	echo " Punctuation ;"   >> $@
+	echo " Symbols ;"       >> $@
 	echo " Entries ;"       >> $@
 	echo                    >> $@
 	echo "LEXICON Entries"  >> $@
