--- a/configure.ac
+++ b/configure.ac
@@ -185,6 +185,8 @@ gt_CONFIG_FILES
 ##### BEGIN: Add language-specific list of files to ######
 ########## be processed by autoconf below here: ##########
 
+AC_CONFIG_FILES([src/fst/incoming/Makefile])
+
 ############ END: Language-specific scripts. #############
 
 # This must be near the end of all configure.ac files:
