--- a/src/fst/Makefile.am
+++ b/src/fst/Makefile.am
@@ -19,9 +19,10 @@
 HFST_LEXC_LOCAL_FLAGS=
 
 ####### Morphology source file defs: ########
+SUBDIRS=incoming .
 
 # Set this to name of lexc file containing Multichar_Symbols and LEXICON Root
-GT_LEXC_ROOT=$(srcdir)/root.lexc
+GT_LEXC_ROOT=root.lexc
 
 # Set this to the names of all regular lexc source files:
 GT_LEXC_SRCS_L1_L2=\
