Rename clean target to clean-local
Automake doesn’t like ‘clean’, that is already defined and reserved - clean-local is the one to use.

--- a/src/fst/incoming/Makefile.am
+++ b/src/fst/incoming/Makefile.am
@@ -45,5 +45,5 @@ entries.lexc: fullform.utf8.txt parse-nno.pl
 	echo "LEXICON Entries"  >> $@
 	cat entries.lexc        >> $@
 
-clean:
+clean-local:
 	-rm -f tags.txt entries.lexc fullform.utf8.txt
