Change dep to the am file

--- a/src/fst/incoming/Makefile.am
+++ b/src/fst/incoming/Makefile.am
@@ -5,7 +5,7 @@ all: ../root.lexc
 fullform.utf8.txt: ordbank_nn/fullform_nn.txt
 	iconv -f ISO-8859-1 -t UTF-8 $< | tail +27 > $@
 
-tags.txt: fullform.utf8.txt Makefile
+tags.txt: fullform.utf8.txt Makefile.am
 	cut -f4 < $<    \
 		| tr '+' '_' \
 		| sed -e 's/< /</'  \
