--- a/src/fst/Makefile.am
+++ b/src/fst/Makefile.am
@@ -85,7 +85,19 @@ GT_DISTRO_SRCS=
 GIELLA_LOCAL_TARGETS=
 
 $(GT_LEXC_ROOT): incoming/tags.txt incoming/entries.lexc
-	$(AM_V_GEN)cd $(dir $< ) && $(MAKE)
+	$(AM_V_GEN)echo "Multichar_Symbols" > $@
+	$(AM_V_GEN)echo                    >> $@
+	$(AM_V_GEN)cat $<                  >> $@
+	$(AM_V_GEN)echo                    >> $@
+	$(AM_V_GEN)echo "+Symbol !!≈ * @CODE@ = symbols in the text, like £, €, ©" >> $@
+	$(AM_V_GEN)echo                    >> $@
+	$(AM_V_GEN)echo "LEXICON Root"     >> $@
+	$(AM_V_GEN)echo " Punctuation ;"   >> $@
+	$(AM_V_GEN)echo " Symbols ;"       >> $@
+	$(AM_V_GEN)echo " Entries ;"       >> $@
+	$(AM_V_GEN)echo                    >> $@
+	$(AM_V_GEN)echo "LEXICON Entries"  >> $@
+	$(AM_V_GEN)cat incoming/entries.lexc >> $@
 
 ### END: Local processing: ###
 
