Make Makefile.am a dependent
so that when it is edited (e.g. for tag conversion), it triggers a rebuild of said conversion.

--- a/src/fst/incoming/Makefile.am
+++ b/src/fst/incoming/Makefile.am
@@ -5,7 +5,7 @@ all: entries.lexc tags.txt
 fullform.utf8.txt: ordbank_nn/fullform_nn.txt
 	$(AM_V_GEN)iconv -f ISO-8859-1 -t UTF-8 $< | tail +27 > $@
 
-tags.txt: fullform.utf8.txt
+tags.txt: fullform.utf8.txt $(srcdir)/Makefile.am
 	$(AM_V_GEN)cut -f4 < $<    \
 		| tr '+' '_' \
 		| sed -e 's/< /</'  \
