Add missing bits for Runr

--- a/src/orthography/Makefile.am
+++ b/src/orthography/Makefile.am
@@ -11,7 +11,8 @@ GT_ORTHOGRAPHIC_REGEX_SRCS=\
 		spellrelax.regex    \
 		spellrelax-mobile-keyboard.regex \
 		spellrelax-tags.regex \
-		Latn-to-Runr.regex
+		Latn-to-Runr.regex    \
+		spellrelax.Runr.regex
 
 GT_ORTHOGRAPHIC_XFSCRIPT_SRCS=\
 		downcase-derived_proper-strings.xfscript \
