--- a/manifest.toml.in
+++ b/manifest.toml.in
@@ -1,4 +1,4 @@
-name = "Norwegian Nynorsk"
+name = "@GLANGUAGE@"
 version = "@SPELLERVERSION@"
 
 # Name of the speller package in various languages.
