--- a/configure.ac
+++ b/configure.ac
@@ -214,7 +214,8 @@ gt_CONFIG_FILES
 ##### BEGIN: Add language-specific list of files to ######
 ########## be processed by autoconf below here: ##########
 
-AC_CONFIG_FILES([src/fst/morphology/incoming/Makefile])
+AC_CONFIG_FILES([src/fst/morphology/incoming/Makefile
+                 tools/spellcheckers/index.Runr.xml])
 
 ############ END: Language-specific scripts. #############
 
