Translate native texts

--- a/configure.ac
+++ b/configure.ac
@@ -72,9 +72,9 @@ AC_SUBST([GTLANGUAGE], $GLANGUAGE)
 ### - tools/spellcheckers/index.*.xml.in
 AC_SUBST([SPELLERVERSION], [0.1.1])
 AC_SUBST([SPELLER_NAME_ENG], ["$GLANGUAGE spellchecker"])
-AC_SUBST([SPELLER_NAME_NATIVE], ["Autonym spellchecker"])
+AC_SUBST([SPELLER_NAME_NATIVE], ["Nynorsk stavekontroll"])
 AC_SUBST([SPELLER_DESC_ENG], ["A spellchecker for $GLANGUAGE, made by members of the language community, and by the Divvun and Giellatekno groups at UiT The Arctic University of Norway"])
-AC_SUBST([SPELLER_DESC_NATIVE], ["TRANSLATE: A spellchecker for $GLANGUAGE, made by members of the language community, and by the Divvun and Giellatekno groups at UiT The Arctic University of Norway"])
+AC_SUBST([SPELLER_DESC_NATIVE], ["Ein stavekontroll for norsk mål, tufta på data frå språkbanken, jobba vidare med av Divvun- og Giellatekno-gruppene ved UiT Noregs arktiske universitet"])
 
 ### Grammar checker release version (usually different from the package version,
 ### typically grammar checkers are released more often than the language
