--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,6 +3,7 @@ title: Norwegian Nynorsk NLP Grammar
 description: Finite state and Constraint Grammar based analysers, proofing tools and other resources
 plugins:
   - jemoji
+  - jekyll-include-cache
 
 markdown: kramdown
 kramdown:
